Fixed length to also fit it on mobile devices

--- a/src/app/book-details/book-details.component.scss
+++ b/src/app/book-details/book-details.component.scss
@@ -35,6 +35,6 @@
 .c-close{
 
     position: absolute; 
-    top: 20px;
+    top: 10px;
     right: 50px;
 }
